Pretty please :pleading_face:

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header id="cabecalho">
-      <img id="logo" src="assets/trybe-grd.jpeg" alt="logo da Trybe">
+      <img id="logo" src="assets/trybe-grd.jpeg" alt="logo da Trybe" />
       <h1 id="titulo">Projeto 01 | Lições Aprendidas</h1>
     </header>
     <main>
@@ -173,11 +173,16 @@
       <table>
         <tr>
           <th>Vamos</th>
-          <th> nos conectar?</th>
+          <th>nos conectar?</th>
         </tr>
         <tr>
           <td>
-            <a href="https://www.instagram.com/kvnfraga/" target="_blank"><img class="icon" src="assets/instagram.jpeg" alt="ícone do instagram"></a>
+            <a href="https://www.instagram.com/kvnfraga/" target="_blank"
+              ><img
+                class="icon"
+                src="assets/instagram.jpeg"
+                alt="ícone do instagram"
+            /></a>
           </td>
           <td>
             <a href="https://www.linkedin.com/in/kevincfraga/" target="_blank"
@@ -189,7 +194,14 @@
           </td>
         </tr>
         <tr>
-          <td><a href="https://twitter.com/Kvn_Frg" target="_blank"></a><img class="icon" src="assets/twitter.png" alt="ícone do twitter"></td>
+          <td>
+            <a href="https://twitter.com/Kvn_Frg" target="_blank"></a
+            ><img
+              class="icon"
+              src="assets/twitter.png"
+              alt="ícone do twitter"
+            />
+          </td>
           <td>
             <a href="https://github.com/KevinFraga" target="_blank"
               ><img class="icon" src="assets/github.png" alt="ícone do github"
