--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
     <title>Project Lessons Learned</title>
 </head>
-
 <body>
     <header id="cabecalho">
         <h1 id="titulo">O que aprendi na Trybe! (até agora)</h1>
@@ -17,20 +16,18 @@
             <a href="#rodape">Redes Sociais</a>
         </nav>
     </header>
-
     <main>
         <section id="sobre_o_autor">
             <img id="minha_foto" src="renan.jpg" alt="Foto do autor Renan Costa">
         </section>
         <article id="resumo_aprendizado">
-            <h2>Sobre o autor</h2>
+            <h2 class="fonte_h2">Sobre o autor</h2>
             <p>Apaixonado pelo mundo tech, comecei a minha trajetória na Tecnologia da Informação ainda adolescente, fazendo montagem e formatação de computadores. Quando da escolha de um curso superior, acabei indo para o lado das ciências jurídicas e exerço a advocacia desde 2013.<br>Contudo, uma vez apaixonado por tecnologia, sempre apaixonado por tecnologia. Assim, em 2020, decidi encarar um novo desafio: fazer o curso de desenvolvimento web na Trybe! #VQV</p>
         </article>
         <aside id="sobre_o_aprendizado">
-            <h2>Sobre o aprendizado</h2>
+            <h2 class="fonte_h2">Sobre o aprendizado</h2>
             <p>O curso teve início em 09/11/2020 e, até a presente data, ainda não se passaram 30 dias.<br>É difícil acreditar no tanto de coisas novas que já foram aprendidas nesse curto período de tempo!</p>
         </aside>
-        
         <section id="lessons">
             <ol id="licoes_aprendidas">
                 <strong>Lições Aprendidas:</strong>
@@ -45,7 +42,6 @@
                 <li>Slack</li>
                 <li>Visual Studio Code</li>
             </ol>
-
             <ul id="licoes_a_aprender">
                 <strong>Lições a Aprender:</strong>
                 <li>React</li>
@@ -61,7 +57,6 @@
             </ul>
         </section>
     </main>
-
     <footer id="rodape">
         Feito pelo Autor: Renan Costa (iniciando a jornada rumo à Programação!);
         <a href="https://github.com/renancosta21" target="_blank">Meu perfil no Github</a>
