--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <img id="minha_foto" src="renan.jpg" alt="Foto do autor Renan Costa">
         </section>
         <article id="resumo_aprendizado">
-            <h2 class="fonte_h2">Sobre o autor</h2>
+            <h2 class="fonte_hx">Sobre o autor</h2>
             <p>Apaixonado pelo mundo tech, comecei a minha trajetória na Tecnologia da Informação ainda adolescente, fazendo montagem e formatação de computadores. Quando da escolha de um curso superior, acabei indo para o lado das ciências jurídicas e exerço a advocacia desde 2013.<br>Contudo, uma vez apaixonado por tecnologia, sempre apaixonado por tecnologia. Assim, em 2020, decidi encarar um novo desafio: fazer o curso de desenvolvimento web na Trybe! #VQV</p>
         </article>
         <aside id="sobre_o_aprendizado">
-            <h2 class="fonte_h2">Sobre o aprendizado</h2>
+            <h2 class="fonte_hx">Sobre o aprendizado</h2>
             <p>O curso teve início em 09/11/2020 e, até a presente data, ainda não se passaram 30 dias.<br>É difícil acreditar no tanto de coisas novas que já foram aprendidas nesse curto período de tempo!</p>
         </aside>
         <section id="lessons">
