--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <title>Project Lessons Learned</title>
 </head>
 <body>
     <header id="cabecalho">
         <h1 id="titulo">O que aprendi na Trybe! (até agora)</h1>
-        <nav>
-            <a href="#sobre_o_autor">Sobre o autor</a>
+        <nav id="links_internos">
+            <a href="#sobre_o_autor">Sobre o autor<br></a>
             <a href="#rodape">Redes Sociais</a>
         </nav>
     </header>
@@ -59,7 +59,7 @@
     </main>
     <footer id="rodape">
         Feito pelo Autor: Renan Costa (iniciando a jornada rumo à Programação!);
-        <a href="https://github.com/renancosta21" target="_blank">Meu perfil no Github</a>
+        <a href="https://github.com/renancosta21" target="_blank"><br>Meu perfil no Github<br></a>
         <a href="https://instagram.com/renan.costa21" target="_blank">Meu perfil no Instagram</a>
     </footer>
 </body>
