--- a/index.html
+++ b/index.html
@@ -1,91 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    <header id="cabecalho">
-      <img class="trybe_logo" src="./images/trybe-logo_black.png" alt="" />
-      <h1 id="titulo">Project Lessons</h1>
-      <nav>
-        <ul class="navegation">
-          <li class="nav-item"><a href="index.html">Home</a></li>
-          <li class="nav-item"><a href="#licoes_aprendidas">Lições</a></li>
-          <li class="nav-item"><a href="#rodape">Contato</a></li>
-        </ul>
-      </nav>
-    </header>
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="stylesheet" href="style.css" />
+<link rel="preconnect" href="https://fonts.gstatic.com" />
+<link
+href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+rel="stylesheet"
+/>
+<title>Trybe | Project Lessons Learned</title>
+</head>
+<body>
+<header id="cabecalho">
+<img class="trybe_logo" src="./images/trybe-logo_black.png" alt="" />
+<h1 id="titulo">Project Lessons</h1>
+<nav>
+<ul class="navegation">
+<li class="nav-item"><a href="index.html">Home</a></li>
+<li class="nav-item"><a href="#licoes_aprendidas">Lições</a></li>
+<li class="nav-item"><a href="https://www.linkedin.com/in/monteiroshm/" target="_blank">Contato</a></li>
+</ul>
+</nav>
+</header>
 
-    <div id="foto-bg">
-    <img id="minha_foto" src="./images/minha_foto.jpeg" alt="" />
-    </div>
-    <div id="container">
-      <article class="lado-esquerdo">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
-          recusandae veniam maiores accusamus maxime necessitatibus ipsum optio
-          facilis itaque non illum, minima possimus repellat? Fugiat ex vel quam
-          repudiandae neque commodi aliquam iusto delectus dolorem iure id fuga
-          voluptas rerum, assumenda suscipit perferendis qui repellat quia
-          veniam
-        </p>
-      </article>
-      <aside class="lado-direito">
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure
-          provident quia amet expedita ducimus repudiandae error eaque deserunt
-          aliquam, explicabo, quaerat unde laboriosam necessitatibus dolor aut
-          maiores
-        </p>
-      </aside>
-    </div>
-    <section id="listas">
-      <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Softskills</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Slack</li>
-        <li>Zoom</li>
-        <li>Inspect</li>
-        <li>Semantic HTML</li>
-      </ol>
+<div id="foto-bg">
+<img id="minha_foto" src="./images/minha_foto.jpeg" alt="" />
+</div>
+<div id="container">
+<article class="lado-esquerdo">
+<p>
+Diferentemente de qualquer outra instituição de ensino de programação na atualidade,
+a Trybe demonstrou em menos de duas semanas, ser capaz de solidificar conteúdos fundamentais
+para o perfil de uma pessoa programadora. Esse site, por exemplo, apesar da simplicidade, demonstra a compreensão
+de um dos conteúdos mais conflituosos para os iniciantes em HTML e CSS: o posicionamento dos Elementos na tela - ou o famoso <strong>Box Model!</strong> 
+</p>
+</article>
+<aside class="lado-direito">
+<p>
+"Aprendi a importância de valorizar minhas soft skills, tanto quanto as hard skills, bem como, que a inteligência emocional deve andar em pararelo por toda a jornada - Comunicação, colaboração, criatividade, liderança e aprendizagem ativa, são umas das principais diferenças dos estudantes da Trybe"
+</p>
+</aside>
+</div>
+<section id="listas">
+<ol id="licoes_aprendidas">
+<li>Unix</li>
+<li>Git</li>
+<li>GitHub</li>
+<li>Softskills</li>
+<li>HTML</li>
+<li>CSS</li>
+<li>Slack</li>
+<li>Zoom</li>
+<li>Inspect</li>
+<li>Semantic HTML</li>
+</ol>
 
-      <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>DOM</li>
-        <li>Forms</li>
-        <li>CSS Responsive</li>
-        <li>ES6</li>
-        <li>HOF</li>
-        <li>Unit Test</li>
-        <li>React</li>
-        <li>Node</li>
-        <li>SQL</li>
-      </ul>
-    </section>
-  </body>
+<ul id="licoes_a_aprender">
+<li>JavaScript</li>
+<li>DOM</li>
+<li>Forms</li>
+<li>CSS Responsive</li>
+<li>ES6</li>
+<li>HOF</li>
+<li>Unit Test</li>
+<li>React</li>
+<li>Node</li>
+<li>SQL</li>
+</ul>
+</section>
+</body>
 
-  <footer id="rodape">
-    <ul class="navegation-foot">
-      <li class="nav-item-foot">
-        <a href="https://github.com/monteirohsm" target="_blank">GitHub</a>
-      </li>
-      <li class="nav-item-foot">
-        <a href="https://www.linkedin.com/in/monteiroshm" target="_blank"
-          >Linkedin</a
-        >
-      </li>
-    </ul>
-  </footer>
+<div class="tabelaContainer">
+<table class="tabela">
+  <thead> 
+    <tr>
+      <th> Linguagem</th>
+      <th> Fundador</th>
+      <th> Sobre</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>HTML</td>
+      <td>Tim Berners-Lee</td>
+      <td>Linguagem usada para criar páginas web por meio de marcadores e atributos, que definem como o conteúdo deve ser apresentado em um navegador web.</td>    
+    </tr>
+    <tr>
+      <td>CSS</td>
+      <td>Håkon Wium Lie</td>
+      <td>CSS é uma linguagem de estilos usada para estilizar elementos de uma página desenvolvida com uma linguagem de marcação, como o HTML. O que ela faz é separar a parte estrutural escrita, ou seja, o conteúdo, da parte visual, ou seja, o design gráfico dessa mesma página.</td>    
+    </tr>
+    <tr>
+      <td>JavaScript</td>
+      <td>Brendan Eich</td>
+      <td>O JavaScript (JS) é uma linguagem de programação utilizada principalmente em páginas web. Com o JS, você pode mostrar mensagens e outras informações interessantes, fazer verificações ou mudar dinamicamente a apresentação visual das páginas, conforme o comportamento que você deseja que sua página (ou aplicação) possua.</td>    
+    </tr>
+  </tbody>
+</table>
+</div>
+
+<footer id="rodape">
+<ul class="navegation-foot">
+<li class="nav-item-foot">
+<a href="https://github.com/monteirohsm" target="_blank">GitHub</a>
+</li>
+<li class="nav-item-foot">
+<a href="https://www.linkedin.com/in/monteiroshm" target="_blank"
+>LinkedIn</a
+>
+</li>
+</ul>
+</footer>
 </html>
