--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ de um dos conteúdos mais conflituosos para os iniciantes em HTML e CSS: o posic
 </article>
 <aside class="lado-direito">
 <p>
-"Aprendi a importância de valorizar minhas soft skills, tanto quanto as hard skills, bem como, que a inteligência emocional deve andar em pararelo por toda a jornada - Comunicação, colaboração, criatividade, liderança e aprendizagem ativa, são umas das principais diferenças dos estudantes da Trybe"
+"Aprendi a importância de que a inteligência emocional deve andar em pararelo por toda a jornada - Comunicação, colaboração, criatividade, liderança e aprendizagem ativa, são umas das principais diferenças dos estudantes da Trybe"
 </p>
 </aside>
 </div>
