Site Finished :sunglasses:

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Texturina:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header id="cabecalho">
@@ -162,11 +170,9 @@
         </div>
       </div>
       <aside class="lado-esquerdo">
-        <p>
-          Estou muito feliz por fazer parte da Trybe, realmente é uma
-          experiência única.
-        </p>
-        <p>Tenho certeza de que minha vida nunca mais será a mesma!</p>
+        <img id="trybe" src="assets/trybe.png" alt="ícone da Trybe" />
+        <p>Muito feliz de fazer parte da Trybe!</p>
+        <p>Minha vida nunca mais será a mesma!</p>
       </aside>
     </div>
     <nav>
