--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header id="cabecalho">
-      <img id="logo" src="assets/trybe-grd.jpeg" alt="logo da Trybe" />
+      <img id="logo" src="assets/trybe.png" alt="logo da Trybe" />
       <h1 id="titulo">Projeto 01 | Lições Aprendidas</h1>
     </header>
     <main>
@@ -201,12 +201,9 @@
         </tr>
         <tr>
           <td>
-            <a href="https://twitter.com/Kvn_Frg" target="_blank"></a
-            ><img
-              class="icon"
-              src="assets/twitter.png"
-              alt="ícone do twitter"
-            />
+            <a href="https://twitter.com/Kvn_Frg" target="_blank">
+              <img class="icon" src="assets/twitter.png" alt="ícone do twitter"
+            /></a>
           </td>
           <td>
             <a href="https://github.com/KevinFraga" target="_blank"
