Parte principal concluida

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <aside id="left_side_screen">
         <img id="minha_foto" src="MinhaFoto.jpg" alt="Minha foto">
-        <table>
+        <table class="lado-esquerdo">
             <tr>
                 <th>Item 1</th>
                 <th>Item 2</th>
@@ -34,17 +34,15 @@
 
         <div id="Learn-history">
             <h3>Uma passagem sobre meu aprendizado</h3>
-            <p> git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"</p>
+            <p class="lado-esquerdo"> git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"</p>
         </div>
     </aside>
 
     <main>
         <article>
             <h3>Como entrei na trybe</h3>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minha participação no processo seletivo da Trybe foi um tanto quanto por acaso. Conheci eles após assistir o anúncio no canal <a href="https://www.youtube.com/user/Diolinux" target="_blank">DioLinux</a>. Li o anúncio principal do site, e isso me deixou com um certo medo por conta do pensamento "é bom demais pra ser verdade". Destrinchei o site todo procurando por furadas e tudo estava batendo. Fiquei tão animado que fiz minha inscrição e dei inicio ao processo de seleção com tudo, me preparando durante todos os dias, sem exceção, de uma forma tão intença que finalizei o teste final em poucos minutos. Realizei a entrevista e me senti tão confortável com nossa conversa que fiquei extremamente ansioso pelo inicio das aulas! Criei espectativas que foram ultrapassadas desde o primeiro dia até hoje!</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minha participação no processo seletivo da Trybe foi um tanto quanto por acaso. Conheci eles com um anúncio no canal <a href="https://www.youtube.com/user/Diolinux" target="_blank">DioLinux</a>. Como todo aquele anúncio estava "bom demais pra ser verdade", destrinchei o site todo procurando por furadas, mas nada estava fora do lugar. Fiquei tão animado que dei inicio ao processo de seleção com tudo, me preparando durante todos os dias, sem exceção, de uma forma tão intença que finalizei o teste final em poucos minutos. Realizei a entrevista e me senti tão confortável com nossa conversa que fiquei extremamente ansioso pelo inicio das aulas! Criei espectativas que foram ultrapassadas desde o primeiro dia até hoje com nossas lives, nossos esquentas, nossas atividades, nossos momentos especiais com convidados e tudo mais!</p>
             <br>
-            <h3>Nossa rotina</h3>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
         </article>
 
         <div id="learning">
@@ -75,6 +73,10 @@
                 <li>MongoDB</li>
             </ul>
         </div>
+
+        <aside>
+            
+        </aside>
     </main>
 
     <footer id="rodape">Copyright 2020-2020 by Bachini, Willian. All Rights Reserved. &copy;
