Added table element (Bonus requisite - 12)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <br>
     <a href="https://www.linkedin.com/in/pauloeliezerg/" target="_blank">Paulo Eliezer</a>
     <section id="listas">
+        <table>
         <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Git</li>
@@ -35,6 +36,7 @@
             <li>Forms</li>
             <li>DOM</li>
             <li>ES6</li>
+        </table>
         </ul>
     </section>
     <article>O aprendizado na Trybe se dá de forma gradual, organizada e satisfatória. A curva de aprendizado é surpreendente: vamos dos fundamentos do Unix ao patamar de Desenvolvedor Full Stack (mais de 1500 horas de curso) em cerca de 1 ano! Contando com uma equipe sempre bastante suportiva e interessada em ajudar e aprender, trata-se de uma experiência única e bastante edificante.</article>
