--- a/index.html
+++ b/index.html
@@ -15,33 +15,40 @@
     <aside id="left_side_screen">
         <img id="minha_foto" src="MinhaFoto.jpg" alt="Minha foto">
         <table class="lado-esquerdo">
+            <h4>Como sou?</h4>
             <tr>
-                <th>Item 1</th>
-                <th>Item 2</th>
-                <th>Item 3</th>
+                <th>Pontos positivos</th>
+                <th>Pontos negativos</th>
             </tr>
             <tr>
-                <td>Palavras 1</td>
-                <td>Palavras 2</td>
-                <td>Palavras 3</td>
+                <td>Foco no objetivo</td>
+                <td>Pouca conversa</td>
             </tr>
             <tr>
-                <td>Palavras 1</td>
-                <td>Palavras 2</td>
-                <td>Palavras 3</td>
+                <td>Curioso</td>
+                <td>Fuço onde não devo</td>
+            </tr>
+            <tr>
+                <td>Dou meu máximo</td>
+                <td>Deixo de lado afazeres <br>
+                por meus objetivos</td>
+            </tr>
+            <tr>
+                <td>Gosto muito de ajudar</td>
+                <td>Sou péssimo em ensinar</td>
             </tr>
         </table>
 
-        <div id="Learn-history">
+        <section id="Learn-history">
             <h3>Uma passagem sobre meu aprendizado</h3>
-            <p class="lado-esquerdo"> git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"git commit -am "Limpeza de Style para corrigir má estilização"</p>
-        </div>
+            <p class="lado-esquerdo">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Acho que o que foi mais marcante pro meu aprendizado foi o nível de preocupação dos professores com o ensino dos alunos. Não vemos essas atitudes nem em escolas particulares renomadas (sou prova viva disso)!</p>
+        </section>
     </aside>
 
     <main>
-        <article>
-            <h3>Como entrei na trybe</h3>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minha participação no processo seletivo da Trybe foi um tanto quanto por acaso. Conheci eles com um anúncio no canal <a href="https://www.youtube.com/user/Diolinux" target="_blank">DioLinux</a>. Como todo aquele anúncio estava "bom demais pra ser verdade", destrinchei o site todo procurando por furadas, mas nada estava fora do lugar. Fiquei tão animado que dei inicio ao processo de seleção com tudo, me preparando durante todos os dias, sem exceção, de uma forma tão intença que finalizei o teste final em poucos minutos. Realizei a entrevista e me senti tão confortável com nossa conversa que fiquei extremamente ansioso pelo inicio das aulas! Criei espectativas que foram ultrapassadas desde o primeiro dia até hoje com nossas lives, nossos esquentas, nossas atividades, nossos momentos especiais com convidados e tudo mais!</p>
+        <article class="lado-direito">
+            <h2>Como entrei na trybe</h2>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minha participação no processo seletivo da Trybe foi um tanto quanto por acaso. Conheci em um anúncio no canal <a href="https://www.youtube.com/user/Diolinux" target="_blank">DioLinux</a>. Como todo aquele anúncio estava "bom demais pra ser verdade", destrinchei o site todo procurando por furadas, mas nada estava fora do lugar. Fiquei tão animado que dei inicio ao meu processo me preparando por todos os dias, sem exceção, de forma intença. Finalizei o teste final em poucos minutos. Realizei a entrevista e me senti tão confortável que fiquei extremamente ansioso pelo inicio das aulas! Criei espectativas que foram superadas desde nosso primeiro momento até hoje!</p>
             <br>
         </article>
 
@@ -74,8 +81,8 @@
             </ul>
         </div>
 
-        <aside>
-            
+        <aside class="lado-direito">
+
         </aside>
     </main>
 
