--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     </header>
 
-    <aside id="left_side_screen">
+    <section id="left_side_screen">
         <img id="minha_foto" src="MinhaFoto.jpg" alt="Minha foto">
         <table class="lado-esquerdo">
             <h4>Como sou?</h4>
@@ -39,16 +39,16 @@
             </tr>
         </table>
 
-        <section id="Learn-history">
+        <aside id="Learn-history">
             <h3>Uma passagem sobre meu aprendizado</h3>
             <p class="lado-esquerdo">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Acho que o que foi mais marcante pro meu aprendizado foi o nível de preocupação dos professores com o ensino dos alunos. Não vemos essas atitudes nem em escolas particulares renomadas (sou prova viva disso)!</p>
-        </section>
-    </aside>
+        </aside>
+    </section>
 
     <main>
         <article class="lado-direito">
             <h2>Como entrei na trybe</h2>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minha participação no processo seletivo da Trybe foi um tanto quanto por acaso. Conheci em um anúncio no canal <a href="https://www.youtube.com/user/Diolinux" target="_blank">DioLinux</a>. Como todo aquele anúncio estava "bom demais pra ser verdade", destrinchei o site todo procurando por furadas, mas nada estava fora do lugar. Fiquei tão animado que dei inicio ao meu processo me preparando por todos os dias, sem exceção, de forma intença. Finalizei o teste final em poucos minutos. Realizei a entrevista e me senti tão confortável que fiquei extremamente ansioso pelo inicio das aulas! Criei espectativas que foram superadas desde nosso primeiro momento até hoje!</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minha participação no processo seletivo da Trybe foi um tanto quanto por acaso. Conheci em um anúncio no canal <a href="https://www.youtube.com/user/Diolinux" target="_blank">DioLinux</a>. Como todo aquele anúncio estava "bom demais pra ser verdade", destrinchei o site todo procurando por furadas, mas nada estava fora do lugar. Fiquei tão animado que dei inicio ao meu processo me preparando por todos os dias. Finalizei o teste final em poucos minutos. Realizei a entrevista e me senti tão confortável que fiquei extremamente ansioso pelo inicio das aulas! Valeu muito a pena!</p>
             <br>
         </article>
 
