--- a/index.html
+++ b/index.html
@@ -9,38 +9,44 @@
 <body>
     <header id="cabecalho"> <h1 id="titulo">Lições Aprendidas - Trybe!</h1></header>
     <img id="minha_foto" src="images/minha_foto.jpg" alt="">
-    <br>
-    <a href="https://www.linkedin.com/in/pauloeliezerg/" target="_blank">Paulo Eliezer</a>
-    <section id="listas">
+    <nav>
+        <a href="https://www.linkedin.com/in/pauloeliezerg/" target="_blank">Paulo Eliezer</a>
+    </nav>
+    <section id="listas" class="lado-esquerdo">
         <table>
-        <ol id="licoes_aprendidas">
-            <li>Unix</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Slack</li>
-            <li>Zoom</li>
-            <li>HTML Semântico</li>
-            <li>Empatia</li>
-            <li>Inspeção de elementos HTML</li>
-        </ol>
-        <ul id="licoes_a_aprender">
-            <li>Apresentação de seminários</li>
-            <li>JavaScript</li>
-            <li>CSS Responsivo</li>
-            <li>SQL</li>
-            <li>NodeJS</li>
-            <li>Unit Tests</li>
-            <li>React</li>
-            <li>Forms</li>
-            <li>DOM</li>
-            <li>ES6</li>
+        <div>
+            <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Slack</li>
+                <li>Zoom</li>
+                <li>HTML Semântico</li>
+                <li>Empatia</li>
+                <li>Inspeção de elementos HTML</li>
+            </ol>
+        </div>
+        <div>
+            <ul id="licoes_a_aprender">
+                <li>Apresentação de seminários</li>
+                <li>JavaScript</li>
+                <li>CSS Responsivo</li>
+                <li>SQL</li>
+                <li>NodeJS</li>
+                <li>Unit Tests</li>
+                <li>React</li>
+                <li>Forms</li>
+                <li>DOM</li>
+                <li>ES6</li>
+            </ul>
+        </div>
         </table>
-        </ul>
     </section>
-    <article>O aprendizado na Trybe se dá de forma gradual, organizada e satisfatória. A curva de aprendizado é surpreendente: vamos dos fundamentos do Unix ao patamar de Desenvolvedor Full Stack (mais de 1500 horas de curso) em cerca de 1 ano! Contando com uma equipe sempre bastante suportiva e interessada em ajudar e aprender, trata-se de uma experiência única e bastante edificante.</article>
-    <aside>Em cerca de 1 mês de curso a turma 9 já está desenvolvendo seu primeiro projeto após sermos apresentados aos conceitos de Bash, Git, HTML e CSS!</aside>
+    <article id="artigo" class="lado-direito">O aprendizado na Trybe se dá de forma gradual, organizada e satisfatória. A curva de aprendizado é surpreendente: vamos dos fundamentos do Unix ao patamar de Desenvolvedor Full Stack (mais de 1500 horas de curso) em cerca de 1 ano! Contando com uma equipe sempre bastante suportiva e interessada em ajudar e aprender, trata-se de uma experiência única e bastante edificante.
+        <aside>Em cerca de 1 mês de curso a turma 9 já está desenvolvendo seu primeiro projeto após sermos apresentados aos conceitos de Bash, Git, HTML e CSS!</aside>
+    </article>
     <footer id="rodape">Aqui está meu rodapé!</footer>
 </body>
 </html>
