--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         <a href="https://www.facebook.com/silveira.jean.9" target="_blank"><img src="face.png" width="60px" alt="FACEBOOK"></a>
         <section id="learning">
             <h2>Aprendizado</h2>
-            <p>Denomina-se <b>cultura punk </b>strong>estilos dentro da subcultura e tribo urbana que possuem características comuns àquelas ditas punk, como por exemplo <i>o princípio de autonomia do faça-você-mesmo</i>>, o interesse pela aparência agressiva, a simplicidade, o sarcasmo niilista e a subversão da cultura.</p>
+            <p>Denomina-se cultura punk estilos dentro da subcultura e tribo urbana que possuem características comuns àquelas ditas punk, como por exemplo o princípio de autonomia do faça-você-mesmo, o interesse pela aparência agressiva, a simplicidade, o sarcasmo niilista e a subversão da cultura.</p>
         </section>
     </aside>
 
     <article class="article">
-        <b>Carpe diem</b> é parte da frase latina carpe diem quam minimum credula postero (literalmente: 'aproveita o dia e confia o mínimo possível no amanhã'), extraída de  uma das Odes, de Horácio (65 a.C. - 8 a.C.), e tem numerosas traduções possíveis: <i>"colhe o dia" (tradução literal), "desfruta o presente", "vive este  dia", "aproveita o dia" ou "aproveita o momento".</i> O poeta latino exorta sua brinterlocutora, Leuconoe, a desfrutar do prazer que a vida oferece, a cada momento de aproveitar o que há de bom em cada instante, já que o futuro é incerto.
+        Carpe diem é parte da frase latina carpe diem quam minimum credula postero (literalmente: 'aproveita o dia e confia o mínimo possível no amanhã'), extraída de uma das Odes, de Horácio (65 a.C. - 8 a.C.), e tem numerosas traduções possíveis: "colhe o dia" (tradução literal), "desfruta o presente", "vive este dia", "aproveita o dia" ou "aproveita o momento". O poeta latino exorta sua brinterlocutora, Leuconoe, a desfrutar do prazer que a vida oferece, a cada momento de aproveitar o que há de bom em cada instante, já que o futuro é incerto.
     </article>
     <nav class="nav">
         <table border="4px" align="center" >
