Confere os requisitos 12, 13, 14 e 15 do projeto.

--- a/index.html
+++ b/index.html
@@ -13,60 +13,67 @@
     </header>
     <img id="minha_foto" class="destaque" src="images/Cleber.png" alt="Cleber">
     <img id="pc" class="preenchimento" src="images/pc.png" alt="">
-    <div id="lista1" class="lista preenchimento">
-      <h2>Lições aprendidas:</h2>
-      <ol id="licoes_aprendidas">
-        <li>Zoom</li>
-        <li>Linux</li>
-        <li>Unix</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Slack</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Inteligência Emocional</li>
-        <li>Empatia</li>
-      </ol>
-    </div>
-    <img id="l_aprendidas" class="preenchimento" src="images/aprendidas.png" alt="">
-    <div id="lista2" class="lista preenchimento">
-      <h2>Lições a aprender:</h2>
-      <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>Lógica de Programação</li>
-        <li>Algoritmos</li>
-        <li>DOM</li>
-        <li>JavaScript ES6</li>
-        <li>Testes automatizados com Jest</li>
-        <li>React</li>
-        <li>Formulários com React</li>
-        <li>Metodologias Ágeis</li>
-        <li>+ Soft Skills</li>
-      </ul>
-    </div>
-    <div>
-      <article id="aprendizado" class="preenchimento" >
-        <h2>Minha experiência com a Trybe</h2>
-        <p>
-          Minha experiência junto a Trybe tem sido muito incrível, intenso, motivador, inspirador e muito rico.
-          Aqui não aprendemos somente o conteúdo técnico necessário para o mercado de trabalho, aprendemos também
-          valores de soft skills muito importantes e que agregam muito para nosso crescimento enquanto pessoas,
-          e desta forma temos um ensino completo que nos prepara não só para o mercado como também para vida.
-          <em>Esta é a Trybe!</em> &#128526;&#128077;
-        </p>
-      </article>
-    </div>
-    <img id="sucesso" class="preenchimento" src="images/sucesso.png" alt="">
-    <div id="div_section">
-      <section id="passagem_aprendizado" class="preenchimento">
-        <h2>Minha evolução com HTML & CSS</h2>
-        <p>
-          Até pouco tempo atrás minhas páginas profissionais eu as estruturava de maneira muito amadora. Hoje com duas semanas e meia de curso na Trybe consigo perceber uma evolução muito grande. &#9996;&#128640; <em>#goTrybe</em>
-        </p>
-      </section>
-    </div>
+    <section>
+      <h2 class="subtitulo">Meus Aprendizados</h2>
+      <div id="lista1" class="lista preenchimento">
+        <h3>Lições aprendidas:</h3>
+        <ol id="licoes_aprendidas">
+          <li>Zoom</li>
+          <li>Linux</li>
+          <li>Unix</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>Slack</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Inteligência Emocional</li>
+          <li>Empatia</li>
+        </ol>
+      </div>
+      <img id="l_aprendidas" class="preenchimento" src="images/aprendidas.png" alt="">
+      <div id="lista2" class="lista preenchimento">
+        <h3>Lições a aprender:</h3>
+        <ul id="licoes_a_aprender">
+          <li>JavaScript</li>
+          <li>Lógica de Programação</li>
+          <li>Algoritmos</li>
+          <li>DOM</li>
+          <li>JavaScript ES6</li>
+          <li>Testes automatizados com Jest</li>
+          <li>React</li>
+          <li>Formulários com React</li>
+          <li>Metodologias Ágeis</li>
+          <li>+ Soft Skills</li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <h2 class="subtitulo">Minhas Experiências</h2>
+      <div>
+        <article id="aprendizado" class="lado-esquerdo preenchimento" >
+          <h3>Minha experiência com a Trybe</h3>
+          <p>
+            Minha experiência junto a Trybe tem sido muito incrível, intenso, motivador, inspirador e muito rico.
+            Aqui não aprendemos somente o conteúdo técnico necessário para o mercado de trabalho, aprendemos também
+            valores de soft skills muito importantes e que agregam muito para nosso crescimento enquanto pessoas,
+            e desta forma temos um ensino completo que nos prepara não só para o mercado como também para vida.
+            <em>Esta é a Trybe!</em> &#128526;&#128077;
+          </p>
+        </article>
+      </div>
+
+      <div id="div_section">
+        <section id="passagem_aprendizado" class="lado-direito preenchimento">
+          <h3>Minha evolução com HTML & CSS</h3>
+          <aside>
+            <img id="sucesso" src="images/sucesso.png" alt="">
+            <p>Até pouco tempo atrás minhas web-pages eu as estruturava de maneira muito amadora. Hoje com duas semanas e meia de curso na Trybe consigo perceber uma evolução muito grande.</p><p>&#9996;&#128640<em>#goTrybe</em></p>
+          </aside>
+        </section>
+      </div>
+    </section>
     <aside id="sobre" class="preenchimento">
-      <h2 id="title_aside">Sobre mim:</h2>
+      <h3 id="title_aside">Sobre mim:</h3>
       <table>
         <tr>
           <td><span class="negrito">Nome:</span></td>
