alteracao de cor e tamanho de fontes

--- a/index.html
+++ b/index.html
@@ -14,80 +14,89 @@
   <header id="cabecalho">
     <h1 id="titulo">Lições Aprendidas [Blocos 1, 2 e 3] | Trybe</h1>
   </header>
-  <main id="conteudo-principal">
-    <img id="minha_foto" src="https://thumbs2.imgbox.com/ee/bf/U0SoaEPl_t.jpg" alt="Imagem Enio Nicael"/>
-    <nav>
-      <a href="https://github.com/EnioNicael" target="_blank">GitHub</a>
-      <a href="https://www.linkedin.com/in/enio-nicael/" target="_blank">Linkedin</a>
-      <a href="https://www.instagram.com/enionicael/" target="_blank">Instagram</a>
-    </nav>
-    <section>
-      <h2>Lições Aprendidas</h2>
-      <ol id="licoes_aprendidas">
-        <li>Inteligência emocional</li>
-        <li>Empatia</li>
-        <li>Bash</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Box Model</li>
-        <li>Posicionamento</li>
-        <li>Organização</li>
-      </ol>
-      <h2>Lições a Aprender</h2>
-      <ul id="licoes_a_aprender">
-        <li>Javascript</li>
-        <li>ReactJS</li>
-        <li>Banco de dados</li>
-        <li>REST</li>
-        <li>Segurança</li>
-        <li>Deploy</li>
-        <li>Python</li>
-        <li>Algoritmos</li>
-        <li>Estrutura de dados</li>
-        <li>Trabalho em equipe</li>
-      </ul>
+  <div id="container">
+    <main id="conteudo-principal">
+      <img id="minha_foto" src="https://thumbs2.imgbox.com/ee/bf/U0SoaEPl_t.jpg" alt="Imagem Enio Nicael"/>
+      <nav>
+        <a href="https://github.com/EnioNicael" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/enio-nicael/" target="_blank">Linkedin</a>
+        <a href="https://www.instagram.com/enionicael/" target="_blank">Instagram</a>
+      </nav>
+      <section>
+        <div id="lista-esquerda">
+          <h2>Lições Aprendidas</h2>
+          <ol id="licoes_aprendidas">
+            <li>Inteligência emocional</li>
+            <li>Empatia</li>
+            <li>Bash</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Box Model</li>
+            <li>Posicionamento</li>
+            <li>Organização</li>
+          </ol>
+        </div>
+        <div id="lista-direita">
+          <h2>Lições a Aprender</h2>
+          <ul id="licoes_a_aprender">
+            <li>Javascript</li>
+            <li>ReactJS</li>
+            <li>Banco de dados</li>
+            <li>REST</li>
+            <li>Segurança</li>
+            <li>Deploy</li>
+            <li>Python</li>
+            <li>Algoritmos</li>
+            <li>Estrutura de dados</li>
+            <li>Trabalho em equipe</li>
+          </ul>
+        </div>
+      </section>
+      <article id="artigo">
+        <h2>Primeiras semanas</h2>
+        <p>Até aqui foram duas semanas intensas de muito estudo e aprendizagem
+          onde aprendi habilidades que fazem parte de um processo ascendente pensado
+          e focado em um aprendizado gradual, aprendi a usar o Bash, Git e GitHub ferramentas essenciais
+          para um programador construir uma base sólida, então comecei a dar
+          os primeiros passos no desenvolvimento Web, aprendendo HTML e CSS.
+          O processo de aprendizagem é bem consistente, através de aulas síncronas, assíncronas,
+          plantões de ajuda e muita prática.</p>
+      </article>
+      <section>
+        <h2>Softskills</h2>
+        <aside>
+          <p>Um ponto muito interessante que eu gostei muito foi sobre aprender softskills, que envolve o lado humano do aluno e não apenas habilidades técnicas. Habilidades
+              essenciais para uma boa convivência não só em abientes profissionais, mas também no
+              dia a dia.</p>
+        </aside>
+      </section>
+    </main>
+    <section id="table-section">
+        <table>
+          <thead>
+            <tr>
+              <th>Introdução ao desenvolvimento web</th>
+              <th>Desenvolvimento Front-end</th>
+              <th>Desenvolvimento Back-End</th>
+              <th>Introdução à Ciência da Computação</th>
+            </tr>
+          </thead
+          <tbody>
+            <tr>
+              <td>Em andamento</td>
+              <td>Pendente</td>
+              <td>Pendente</td>
+              <td>Pendente</td>
+            </tr>
+          </tbody>
+        </table>
     </section>
-    <article>
-      <h2>Primeiras semanas</h2>
-      <p>Até aqui foram duas semanas intensas de muito estudo e aprendizagem
-        onde aprendi habilidades que fazem parte de um processo ascendente pensado
-        e focado em um aprendizado gradual, aprendi a usar o Bash, Git e GitHub ferramentas essenciais
-        para um programador construir uma base sólida, então comecei a dar
-        os primeiros passos no desenvolvimento Web, aprendendo HTML e CSS.
-        O processo de aprendizagem é bem consistente, através de aulas síncronas, assíncronas,
-        plantões de ajuda e muita prática.</p>
-    </article>
-    <aside>
-      <h2>Softskills</h2>
-      <p>Um ponto muito interessante que eu gostei muito foi sobre aprender softskills, que envolve o lado humano do aluno e não apenas habilidades técnicas. Habilidades
-         essenciais para uma boa convivência não só em abientes profissionais, mas também no
-         dia a dia.</p>
-    </aside>
-  </main>
-  <section>
-    <table>
-      <thead>
-        <tr>
-          <th>Introdução ao desenvolvimento web</th>
-          <th>Desenvolvimento Front-end</th>
-          <th>Desenvolvimento Back-End</th>
-          <th>Introdução à Ciência da Computação</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Em andamento</td>
-          <td>Pendente</td>
-          <td>Pendente</td>
-          <td>Pendente</td>
-        </tr>
-      </tbody>
-    </table>
-  </section>
+  </div>
   <footer id="rodape">
     <p>Desenvolvido por <strong>Enio Nicael</strong></p>
   </footer>
 </body>
 </html>
+      
