Adicionado atributos às fontes, colocando textos lado a lado

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             alt="Uma foto profissional em preto e branca de Emanoel Cristhian.">
     </section>
 
-    <section class="texto">
-        <article id="texto">
+    <article class="texto">
+        <article id="lado-esquerdo">
             Sim, sou um <strong>Tryber</strong>, com todo orgulho do mundo. Desde o processo seletivo eu tenho aprendido
             muito com essa
             escola do futuro. Em duas semanas eu aprendi tanta coisa que nem se compara o meu EU de duas semanas atrás
@@ -42,7 +42,7 @@
             mais coisas para aprender, até mais!
         </article>
 
-        <section id="texto_mini">
+        <section id="lado-direito">
             <aside>
                 <i>
                 Sou tryber com orgulho, aqui eu estou construindo desde o início um mindset de um verdadeiro
@@ -81,7 +81,8 @@
                 </tr>
             </tbody>
         </table>
-    </section>
+    </article>
+
     <h3>Lições Aprendidas</h3>
     <ol id="licoes_aprendidas">
         <li>Unix</li>
