--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lessons Learned</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <header id="cabecalho" class="header">Header
+    <header id="cabecalho" class="header">
         <h1 id="titulo">A estrada até aqui...</h1>
     </header>
-    <aside class="aside-left"> Aside left
+    <aside class="aside-left">
         <img id="minha_foto" src="my-picture.jpeg" alt="Jovem sorridente, largo sorriso branco e olhos enrrugados e cabelos negros" class="my-image">
 
         <ol id="licoes_aprendidas">
+            <h2>Lições Aprendidas</h2>
             <li>Linux</li>
             <li>Bash</li>
             <li>Shell</li>
@@ -27,6 +28,7 @@
         </ol>
 
         <ul id="licoes_a_aprender">
+            <h2>Lições à Aprender</h2>
             <li>Algoritmos</li>
             <li>Laços de repetição</li>
             <li>JavaScript</li>
@@ -41,7 +43,7 @@
     </aside>
     <aside class="aside-right">
         <a href="https://www.facebook.com/silveira.jean.9" target="_blank"><img src="face.png" width="60px" alt="FACEBOOK"></a>
-        <section id="learning">
+        <section>
             <h2>Aprendizado</h2>
             <p>Denomina-se cultura punk estilos dentro da subcultura e tribo urbana que possuem características comuns àquelas ditas punk, como por exemplo o princípio de autonomia do faça-você-mesmo, o interesse pela aparência agressiva, a simplicidade, o sarcasmo niilista e a subversão da cultura.</p>
         </section>
@@ -61,6 +63,8 @@
             </tr>
         </table>
     </nav>
-    <footer id="rodape" class="footer"></footer>
+    <footer id="rodape" class="footer">
+        Desenvolvido por Smylle - Jean Silveira
+    </footer>
 </body>
 </html>
