--- a/index.html
+++ b/index.html
@@ -8,58 +8,69 @@
     </head>
     <body>
         <header id="cabecalho">
+            <nav id="headNav">
+                <table id="tableSize">
+                    <tr>
+                        <td><a href="#main">Home</a></td>
+                        <td><a href="#rodape">Reference</a></td>
+                        <td><a href="#rodape">Contact</a></td>
+                    </tr>
+                </table>
+            </nav>
             <h1 id="titulo">Primeiro Projeto &#x1F680;</h1>
+         
         </header>
-        <nav id="headNav">
-            <table id="tableSize">
-                <tr>
-                    <td><a href="#main">Home</a></td>
-                    <td><a href="#rodape">Reference</a></td>
-                    <td><a href="#rodape">Contact</a></td>
-                </tr>
-            </table>
-        </nav>
+
         <main id="main">
-            <article class="lado-esquerdo">
+            <article >
                 <p><img src="https://rodrigoneoex.github.io/atual.jpeg" alt="homem camisa verde" id="minha_foto" width="100px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere a. Vestibulum eu dapibus felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium felis ac odio faucibus imperdiet. Nunc tristique, sem ac commodo imperdiet, purus orci maximus elit, ac lacinia arcu nisi in metus. Vivamus congue enim orci, vel tristique orci pharetra non.</p>
             </article>
             <aside>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat <img src="https://julianaconstantino.files.wordpress.com/2011/08/lorem-ipsum.jpeg" alt="lorem ipsum" id="lorem" width="300px"></p>
             </aside>
-            <section class="lado-direito">
+            <div id="sides">
+            <section class="lado-esquerdo">
                 <h2>Lições Aprendidas</h2>
-                <ol id="licoes_aprendidas">
-                    <li>Git</li>
-                    <li>GitHub</li>
-                    <li>Internet</li>
-                    <li>CSS</li>
-                    <li>VSCode</li>
-                    <li>HTML</li>
-                    <li>Economizar Dedos</li>
-                    <li>Softskills</li>
-                    <li>Hardskills</li>
-                    <li>Bash</li>
-                </ol>
+                        <ol>
+                            <li>Git</li>
+                            <li>GitHub</li>
+                            <li>Internet</li>
+                            <li>CSS</li>
+                            <li>VSCode</li>
+                            <li>HTML</li>
+                            <li>Economizar Dedos</li>
+                            <li>Softskills</li>
+                            <li>Hardskills</li>
+                            <li>Bash</li>
+                        </ol>              
             </section>
-            <section>
-                <h2>Lições a Aprender</h2>
-                <ul id="licoes_a_aprender">
-                    <li>sao</li>
-                    <li>tantas</li>
-                    <li>coisas</li>
-                    <li>que</li>
-                    <li>fica</li>
-                    <li>dificil</li>
-                    <li>de</li>
-                    <li>decorar</li>
-                    <li>ou</li>
-                    <li>enumerar</li>
-                </ul>
+            <section class="lado-direito">
+                   <h2>Lições a Aprender</h2>
+                        <ul>
+                            <li>sao</li>
+                            <li>tantas</li>
+                            <li>coisas</li>
+                            <li>que</li>
+                            <li>fica</li>
+                            <li>dificil</li>
+                            <li>de</li>
+                            <li>decorar</li>
+                            <li>ou</li>
+                            <li>enumerar</li>
+                        </ul>
+                </div>
             </section>
         </main>
     </body>
         <footer id="rodape">
+            <br><br><br><br>
+            <div id="moveR">
             <p><a href="https://www.lipsum.com/" target="_blank">Gerador de Textos</a></p>
             <p>&#x1F4EA;ehauehuae@heau.com / &#x1F4F1;1215 16841 6841 / Powered by: Rodrigo Camargo</p>
+            </div>
+            <div id="social">
+            <a href="https://github.com/RodrigoNeoEx" target="_blank"><img src="git.png" alt="icone github" id="git" width="55px"> </a>
+          <a href="https://www.linkedin.com/in/rodrigo-camargo-7421261b2/" target="_blank"><img src="linkedin.png" alt="icone linkedin" id="linkedin" width="55px"></a>
+        </div> 
         </footer>
         </html>
