--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id="sides">
                 <section class="lado-esquerdo">
                     <h2>Lições Aprendidas</h2>
-                            <ol>
+                            <ol id="licoes_aprendidas">
                                 <li>Git</li>
                                 <li>GitHub</li>
                                 <li>Internet</li>
@@ -44,7 +44,7 @@
                 </section>
                 <section class="lado-direito">
                     <h2>Lições a Aprender</h2>
-                            <ul>
+                            <ul id="licoes_a_aprender">
                                 <li>sao</li>
                                 <li>tantas</li>
                                 <li>coisas</li>
