Ajusta a seçao e corrige indicaçoes do codeclimate

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       <div id="div_section">
         <section id="passagem_aprendizado" class="lado-direito preenchimento">
-          <h3>Minha evolução HTML / CSS</h3><aside><img id="sucesso" src="images/sucesso.png" alt=""><p>Até pouco tempo atrás minhas paginas eram estruturadas de forma amadora. Hoje com duas semanas e meia de curso na Trybe consigo perceber uma grande evolução.</p><p>&#128640<em>#goTrybe</em></p></aside>
+          <h3>Minha evolução HTML / CSS</h3><aside><img id="sucesso" src="images/sucesso.png" alt=""></aside><p>Até pouco tempo atrás minhas paginas eram estruturadas de forma amadora. Hoje com duas semanas e meia de curso na Trybe consigo perceber uma grande evolução.</p><p>&#128640<em>#goTrybe</em></p>
         </section>
       </div>
     </section>
